security/ocpscan/manifests/ocpscan-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: ocpscan
  name: ocpscan-dc
spec:
  replicas: 1
  selector:
    app: ocpscan
    deploymentconfig: ocpscan-dc
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: ocpscan
        deploymentconfig: ocpscan-dc
    spec:
      serviceAccount: ocpscan-sa
      containers:
      - image: prasenforu/ocpscan:8.0
        name: ocpscan
        ports:
        - name: ocpscan
          containerPort: 9000
        volumeMounts:
        - mountPath: /log
          name: ocpscanlog-path-volume-config
        - mountPath: /etc/webhook/hooks.json
          subPath: hooks.json
          name: ocpscan-hooks-volume-config
        - mountPath: /etc/webhook/vscan.sh
          subPath: vscan.sh
          name: ocpscan-vcanscript-volume-config
        - mountPath: /etc/webhook/scanner.sh
          subPath: scanner.sh
          name: ocpscan-scanscript-volume-config
        - mountPath: /etc/webhook/nswhitelist.txt
          subPath: nswhitelist.txt
          name: ocpscan-nswhitelist-volume-config
        - mountPath: /etc/webhook/mailtemplate.txt
          subPath: mailtemplate.txt
          name: ocpscan-mailbody-volume-config
        - mountPath: /etc/webhook/mailsend.py
          subPath: mailsend.py
          name: ocpscan-mail-volume-secret
      volumes:
      - persistentVolumeClaim:
          claimName: ocpscan-storage
        name: ocpscanlog-path-volume-config
      - configMap:
          defaultMode: 420
          name: ocpscan-hooks-configmap
        name: ocpscan-hooks-volume-config
      - configMap:
          defaultMode: 493
          name: ocpscan-scanscript-configmap
        name: ocpscan-scanscript-volume-config
      - configMap:
          defaultMode: 493
          name: ocpscan-vcanscript-configmap
        name: ocpscan-vcanscript-volume-config
      - configMap:
          defaultMode: 420
          name: ocpscan-mailbody-configmap
        name: ocpscan-mailbody-volume-config
      - configMap:
          defaultMode: 420
          name: ocpscan-nswhitelist-configmap
        name: ocpscan-nswhitelist-volume-config
      - secret:
          defaultMode: 493
          secretName: ocpscan-mail-secret
          items:
          - key: mailsend
            path: mailsend.py
        name: ocpscan-mail-volume-secret
