security/ocpscan/manifests/ocpscan-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocpscan
  name: ocpscan-service
spec:
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: ocpscan
    deploymentconfig: ocpscan-dc
