security/ocpscan/manifests/ocpscanlog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocpscanlog
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: ocpscanlog-tls
spec:
  ports:
  - name: ocpscanlog
    port: 443
    targetPort: 8443
  selector:
    app: ocpscanlog
