security/ocpscan/manifests/ocpscanlog-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: ocpscanlog
spec:
  to:
    kind: Service
    name: ocpscanlog
  tls:
    termination: Reencrypt
